# roomieorder

./: .envrc  .gitignore  AGENTS.md  CLAUDE.md  DASHBOARD.md  IMPROVEMENTS.md  PLAN-ROOMIE.md  PLAN.md  PROGRESS.md  README.md  catalog.json  flake.nix  pyproject.toml  renovate.json
.claude/: settings.json  settings.json.proposed
.claude/commands/: bring-up.md  diagnose.md  trace-order.md  triage-failure.md  verify-selectors.md
.claude/hooks/: session-start.sh
.github/actions/setup-nix-attic/: action.yml
.github/workflows/: ci.yml  flake-update.yml
examples/: catalog.json  env.example  home-assistant.yaml
nix/: ha-buttons.nix  ha-module.nix  module.nix  package.nix  patchright.nix
src/roomieorder/: __init__.py  __main__.py  activity.py  catalog.py  cli.py  config.py  guards.py  heartbeat.py  logutil.py  main.py  notify.py  orchestrator.py  purchase.py  retention.py  sheets.py  store.py
tests/: conftest.py  test_activity.py  test_catalog.py  test_cli.py  test_config.py  test_dom_fixtures.py  test_guards.py  test_heartbeat.py  test_logutil.py  test_main.py  test_notify.py  test_orchestrator.py  test_purchase.py  test_retention.py  test_sheets.py  test_store.py
tests/fixtures/dom/: README.md  costco_product_paper_towels.html
