[project]
name = "roomieorder"
version = "0.1.0"
description = "Home Assistant button → automatic Amazon order → Google Sheets log"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6",
  "click>=8.1",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "httpx>=0.27",
  "gspread>=6.0",
  "google-auth>=2.28",
  "playwright>=1.40",
]

[project.scripts]
roomieorder = "roomieorder.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roomieorder"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = ["src"]

[[tool.mypy.overrides]]
# gspread ships no type stubs; google.oauth2 partial.
module = ["gspread.*", "google.oauth2.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
